2003-09-16  Alexander Larsson  <alexl@redhat.com>

	* schemas/system_http_proxy.schemas:
	Add missing schemas.
	Patch by Marco Pesenti Gritti.

2003-09-15  Christophe Fergeau  <teuf@gnome.org>
 
         * modules/http-method.c: define INET_ADDRSTRLEN if it's not defined
           in the system headers (fixes #121720)

2003-09-12  Alexander Larsson  <alexl@redhat.com>

	* HACKING:
	Fix list name.

2003-09-11  Fatih Demir <kabalak@gtranslator.org>

	* configure.in: Added "ta" (Tamil) to the languages' list.

=== gnome-vfs 2.4.0 ===

2003-09-08  Alexander Larsson  <alexl@redhat.com>

	* NEWS: 
	* configure.in:
	Version 2.4.0

=== gnome-vfs 2.3.90 ===

2003-09-02  Alexander Larsson  <alexl@redhat.com>

	* NEWS: 
	* configure.in:  2.3.90

2003-09-02  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-mime-monitor.c:
	Add a small delay to the mime db changed signal emission
	to avoid sending multiple events for one change.

2003-09-01  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "ne" to ALL_LINGUAS.

=== gnome-vfs 2.3.8 ===

2003-08-25  Alexander Larsson  <alexl@redhat.com>

	* NEWS: 
	* configure.in:
	Bump to 2.3.8

2003-08-25  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-utils.c (gnome_vfs_make_uri_from_input_internal):
	Only add http: if the string looks like a http uri.

2003-08-25  Alexander Larsson  <alexl@redhat.com>

	* modules/default-modules.conf:
	Add dav: scheme, handled by the http module.

2003-08-19  Alexander Larsson  <alexl@redhat.com>

	* modules/file-method.c (fam_do_iter_unlocked):
	Don't do anything if fam_connection is NULL.
	Should fix bug #120211

2003-08-13  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-utils.c:
	revert the ngettext usage.
	
2003-08-13  Alexander Larsson  <alexl@redhat.com>

	* modules/http-method.c: Fix the build for Solaris, FreeBSD (and
	probably anything else that is "not Linux"). Fixes bug #119706.
	based on patch by Malcolm Tredinnick
	